fix whitespace rendering

--- a/style.css
+++ b/style.css
@@ -79,6 +79,7 @@ p {
 
 .tweet p.tweet-text {
     word-break: break-word;
+    white-space: pre-wrap;
 }
 
 .tweet .emoji {
